--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
                         <p>Great Learning</p>
                         <p>2024</p>
                     </div>
+                <div class="certification">
+                        <h3><a href="" target="_blank">Tally Certificate</a></h3>
+                        <p>VUnify Technology Private Ltd</p>
+                        <p>2022</p>
+                    </div>
+                <div class="certification">
+                        <h3><a href="https://drive.google.com/file/d/1WLxPM0l0_lDUA2jvJ-ijCrzvJIo54ADe/view?usp=sharing" target="_blank">Power Bi Micro Course</a></h3>
+                        <p>Skill Course</p>
+                        <p>2022</p>
+                    </div>
                 </section>
             </div>
         </div>
